# context-router

./: .cursorrules  .gitignore  .mcp.json  .opencode.json  .windsurfrules  AGENTS.md  AGENT_GUIDE.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  NOTICE  PLAN.md  README.md  RELEASE.md  ROADMAP.md  conftest.py  pyproject.toml
.claude/agents/: docs-agent.md
.claude/commands/: ship-check.md
.claude/skills/ship-check/: SKILL.md
.context-router/: context-router.db  last-pack.json
.context-router/memory/observations/: 2026-04-25-v43-complete-phase-c-ranking-quality.md  2026-04-25-v44-implementation-started-symbol-leve.md  2026-04-26-memory-self-evaluation-baseline-search.md  2026-04-26-v44-implementation-complete-6-language.md
.githooks/: post-commit  pre-push
.github/workflows/: ci.yml  docs-sync.yml  eval-synthetic.yml  release.yml
.handover/: manifest.yaml
.handover/codebase/: dependencies.json  index.md  structure.json  symbols.json
.handover/context/: acceptance-criteria.md  architecture.md  constraints.md  decisions.md  overview.md  risks.md
.handover/prompts/: agent-bootstrap.md  continue.md  debug.md  implement.md  onboard.md  review.md  test.md
.handover/standards/: coding-standards.md  release-checklist.md  security-guardrails.md  testing-standards.md
.handover/work/: backlog.json  milestones.md  spec.md  tasks.md  v4.4.4-plan.md
apps/cli/: README.md  pyproject.toml
apps/cli/src/cli/: __init__.py  main.py
apps/cli/src/cli/assets/: __init__.py  d3.v7.min.js
apps/cli/src/cli/commands/: __init__.py  audit.py  benchmark.py  decisions.py  doctor.py  embed.py  eval_cmd.py  explain.py  feedback.py  graph.py  index.py  init.py  mcp.py  memory.py  pack.py  setup.py  watch.py  workspace.py
apps/cli/tests/: conftest.py  test_audit_cli.py  test_benchmark_cli.py  test_cli.py  test_doctor_cli.py  test_embed_cli.py  test_eval_command.py  test_fastapi_crg_score.py  test_graph_command.py  test_memory_show_migrate.py  test_mode_mismatch_warning.py  test_pack_budget.py  test_pack_dedup.py  test_pack_ergonomics.py  test_pack_minimal.py  test_pack_review_risk.py  test_pack_wiki.py  test_pack_with_semantic.py  test_packaging_smoke.py  test_pre_fix_review.py  test_setup.py  test_top_k_flag.py  test_version.py  test_workspace_cli.py
apps/cli/tests/fixtures/tiny_workspace/: queries.jsonl  workspace.yaml
apps/cli/tests/fixtures/tiny_workspace/backend/: pyproject.toml
apps/cli/tests/fixtures/tiny_workspace/backend/src/: checkout.py  users.py
apps/cli/tests/fixtures/tiny_workspace/frontend/src/pages/: Pricing.tsx  Users.tsx
apps/mcp-server/: pyproject.toml
apps/mcp-server/src/mcp_server/: __init__.py  main.py  resources.py  tools.py
apps/mcp-server/tests/: test_get_minimal_context.py  test_main.py  test_mode_mismatch_warning.py  test_notify.py  test_progress.py  test_resources.py  test_stub.py  test_subprocess_integration.py  test_tools.py  test_top_k_flag.py
benchmark/: README.md  build_k8s_synthetic.sh  run-comparison.sh  run-holdout.sh
benchmark/holdout/actix-web/: tasks.yaml
benchmark/holdout/django/: tasks.yaml
benchmark/holdout/gin/: tasks.yaml
benchmark/holdout/gson/: tasks.yaml
benchmark/holdout/kubernetes/: tasks.yaml
benchmark/holdout/rails/: tasks.yaml
benchmark/holdout/requests/: tasks.yaml
benchmark/holdout/zod/: tasks.yaml
benchmarks/: comparison-code-review-graph.md
benchmarks/results/2026-04-28-v4.4.3/: cr_actix-t1.json  cr_actix-t2.json  cr_actix-t3.json  cr_django-t1.json  cr_django-t2.json  cr_django-t3.json  cr_gin-t1.json  cr_gin-t2.json  cr_gin-t3.json  score_actix-t1.json  score_actix-t2.json  score_actix-t3.json  score_django-t1.json  score_django-t2.json  score_django-t3.json  score_gin-t1.json  score_gin-t2.json  score_gin-t3.json  summary.json  summary.md
benchmarks/results/2026-04-28-v4.4.3-fresh/: cr_gson-t1.json  cr_gson-t2.json  cr_gson-t3.json  cr_requests-t1.json  cr_requests-t2.json  cr_requests-t3.json  cr_zod-t1.json  cr_zod-t2.json  cr_zod-t3.json  score_gson-t1.json  score_gson-t2.json  score_gson-t3.json  score_requests-t1.json  score_requests-t2.json  score_requests-t3.json  score_zod-t1.json  score_zod-t2.json  score_zod-t3.json  summary.json  summary.md
benchmarks/results/2026-04-29-k8s-comparison/: comparison_code-review-graph_k8s-t1.json  comparison_code-review-graph_k8s-t2.json  comparison_code-review-graph_k8s-t3.json  comparison_context-router_k8s-t1.json  comparison_context-router_k8s-t2.json  comparison_context-router_k8s-t3.json  summary.json
benchmarks/results/2026-04-29-k8s-fix-sha/: score_k8s-t1.json  score_k8s-t2.json  score_k8s-t3.json  summary.json  summary.md
benchmarks/results/2026-04-29-k8s-parent-sha-with-diff/: score_k8s-t1.json  score_k8s-t2.json  score_k8s-t3.json  summary.json  summary.md
benchmarks/results/2026-04-29-k8s-query-only/: score_k8s-t1.json  score_k8s-t2.json  (+3 more)
docs/: architecture.md  homebrew-formula.rb  mcp-directory-submissions.md  roadmap.md  v0.6.0-summary.md
docs/adr/: 0001-use-sqlite-fts5.md  0002-plugin-entry-points.md
docs/design/: README.md  v4.3-staleness-federation.md
docs/eval/: 2026-04-23-baseline.md  2026-04-26-crg-parity.md  2026-04-27-multi-repo-crg-validation.md  v4.3-baseline.json
docs/guides/: modes.md
docs/perf/: 2026-04-23-v3.3.1-evaluation.md
docs/release/: README.md  dod-template.md  homebrew-setup.md  v3-outcomes-plain-english.md  v3-outcomes.yaml  v3-roadmap.md  v3_1-roadmap.md  v3_2-roadmap.md  v4-outcomes.yaml  v4.4.1-notes.md  v4.4.2-notes.md
eval/fastapi-crg/: .gitignore  README.md  extract_files.py  requirements.txt  run.sh  score.py
scripts/: docs_sync.py  eval-synthetic.sh  fetch-benchmark-repos.sh  mcp_mimetype_probe.py  mcp_progress_count.py  mcp_progress_notifications_probe.py  mcp_resources_probe.py  mcp_version_probe.py  render_homebrew_formula.py  smoke-packaging.sh  smoke-v3.sh  smoke-v4.1.sh  smoke-v4.2.sh  smoke-v4.3.sh
scripts/hooks/: on_agent_complete.py  on_debug_resolve.py  on_handover.py
tests/: test_fastapi_crg_score.py
(+16 files in other folders)
