[project]
name = "context-router-cli"
version = "4.0.0"
requires-python = ">=3.12"
description = "Local-first CLI and MCP server for AI coding context — minimum useful context, maximum agent performance"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "llm", "context", "mcp", "code-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "cachetools>=5.3",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-c-sharp>=0.21",
    "watchdog>=4.0",
    "context-router-evaluation",
]

[project.urls]
Homepage = "https://github.com/mohankrishnaalavala/context-router"
"Bug Tracker" = "https://github.com/mohankrishnaalavala/context-router/issues"
Changelog = "https://github.com/mohankrishnaalavala/context-router/blob/main/CHANGELOG.md"

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]

[project.scripts]
context-router = "cli.main:app"

# Register the bundled language analyzers under the `context_router.language_analyzers`
# entry-point group. The CLI wheel force-includes the analyzer source in the
# `[tool.hatch.build.targets.wheel.force-include]` block below, so these entry
# points point at the same modules that ship with the wheel. Without this block,
# `importlib.metadata.entry_points(group="context_router.language_analyzers")`
# returns an empty iterable on fresh `pip install context-router-cli`, the
# PluginLoader registers zero analyzers, and `context-router index` silently
# indexes zero files — the exact class of bug v3's quality gate forbids.
#
# Language plugins published as their own distributions (when that ever
# happens) also register entry points for the same group, so importlib's
# metadata scan finds both and the `PluginLoader` deduplicates by extension.
[project.entry-points."context_router.language_analyzers"]
py = "language_python:PythonAnalyzer"
java = "language_java:JavaAnalyzer"
ts = "language_typescript:TypeScriptAnalyzer"
tsx = "language_typescript:TypeScriptAnalyzer"
js = "language_typescript:TypeScriptAnalyzer"
cs = "language_dotnet:DotnetAnalyzer"
yaml = "language_yaml:YamlAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

# Bundle all workspace-internal sub-packages so the wheel is self-contained.
# These paths are relative to apps/cli/ (this file's directory).
#
# The cli/assets/d3.v7.min.js entry ships the bundled D3.js used by the
# `context-router graph` command. It is force-included (in addition to being
# under `packages = ["src/cli"]`) because hatchling's default file-selection
# excludes non-.py files in some configurations, and a silent drop here
# would reintroduce the offline blank-canvas bug that this rule guards.
[tool.hatch.build.targets.wheel.force-include]
"src/cli/assets/d3.v7.min.js"                  = "cli/assets/d3.v7.min.js"
"../../packages/contracts/src/contracts"       = "contracts"
"../../packages/core/src/core"                 = "core"
"../../packages/storage-sqlite/src/storage_sqlite" = "storage_sqlite"
"../../packages/graph-index/src/graph_index"   = "graph_index"
"../../packages/memory/src/memory"             = "memory"
"../../packages/runtime/src/runtime"           = "runtime"
"../../packages/ranking/src/ranking"           = "ranking"
"../../packages/workspace/src/workspace"       = "workspace"
"../../packages/contracts-extractor/src/contracts_extractor" = "contracts_extractor"
"../../packages/benchmark/src/benchmark"       = "benchmark"
"../../packages/evaluation/src/evaluation"     = "evaluation"
"../../packages/language-python/src/language_python" = "language_python"
"../../packages/language-yaml/src/language_yaml"     = "language_yaml"
"../../packages/language-typescript/src/language_typescript" = "language_typescript"
"../../packages/language-java/src/language_java"     = "language_java"
"../../packages/language-dotnet/src/language_dotnet" = "language_dotnet"
"../../packages/adapters-claude/src/adapters_claude" = "adapters_claude"
"../../packages/adapters-copilot/src/adapters_copilot" = "adapters_copilot"
"../../packages/adapters-codex/src/adapters_codex"   = "adapters_codex"
"../../apps/mcp-server/src/mcp_server"         = "mcp_server"
