[project]
name = "context-router-cli"
version = "4.4.3"
requires-python = ">=3.12"
description = "Local-first CLI and MCP server for AI coding context — minimum useful context, maximum agent performance"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ai", "llm", "context", "mcp", "code-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "cachetools>=5.3",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-c-sharp>=0.21",
    "watchdog>=4.0",
    "context-router-evaluation",
]

[project.urls]
Homepage = "https://github.com/mohankrishnaalavala/context-router"
"Bug Tracker" = "https://github.com/mohankrishnaalavala/context-router/issues"
Changelog = "https://github.com/mohankrishnaalavala/context-router/blob/main/CHANGELOG.md"

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]
# Tree-sitter parsers for the optional language analyzers (Go, Rust, Ruby,
# PHP). The analyzer source code itself ships in every wheel via
# `[tool.hatch.build.targets.wheel.force-include]` below — this extra only
# adds the runtime parser deps. Without these parsers installed, the entry
# points still register, but loading the analyzer fails at import and the
# PluginLoader emits a stderr warning naming the missing parser. SQL is
# regex-based (no tree-sitter dep) and ships unconditionally.
#
# Default install: Python / TypeScript / JavaScript / Java / C# / YAML / SQL.
# `[all-languages]` adds: Go / Rust / Ruby / PHP.
#
# Polyglot or monorepo users should run:
#   uv tool install 'context-router-cli[all-languages]'
#   pipx install 'context-router-cli[all-languages]'
all-languages = [
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-ruby>=0.21",
    "tree-sitter-php>=0.21",
]

[project.scripts]
context-router = "cli.main:app"

# Register the bundled language analyzers under the `context_router.language_analyzers`
# entry-point group. The CLI wheel force-includes the analyzer source in the
# `[tool.hatch.build.targets.wheel.force-include]` block below, so these entry
# points point at the same modules that ship with the wheel. Without this block,
# `importlib.metadata.entry_points(group="context_router.language_analyzers")`
# returns an empty iterable on fresh `pip install context-router-cli`, the
# PluginLoader registers zero analyzers, and `context-router index` silently
# indexes zero files — the exact class of bug v3's quality gate forbids.
#
# Language plugins published as their own distributions (when that ever
# happens) also register entry points for the same group, so importlib's
# metadata scan finds both and the `PluginLoader` deduplicates by extension.
[project.entry-points."context_router.language_analyzers"]
py = "language_python:PythonAnalyzer"
java = "language_java:JavaAnalyzer"
ts = "language_typescript:TypeScriptAnalyzer"
tsx = "language_typescript:TypeScriptAnalyzer"
js = "language_typescript:TypeScriptAnalyzer"
jsx = "language_typescript:TypeScriptAnalyzer"
mjs = "language_typescript:TypeScriptAnalyzer"
cjs = "language_typescript:TypeScriptAnalyzer"
cs = "language_dotnet:DotnetAnalyzer"
yaml = "language_yaml:YamlAnalyzer"
yml = "language_yaml:YamlAnalyzer"
# SQL is regex-only — no tree-sitter parser required, ships in default install.
sql = "language_sql:SqlAnalyzer"
# The remaining four require tree-sitter parsers, which only ship via
# `[all-languages]`. Without them the PluginLoader logs a stderr warning
# at index time naming the missing parser and skips the analyzer; other
# analyzers continue to work. This matches the no-silent-failure policy.
go = "language_go:GoAnalyzer"
rs = "language_rust:RustAnalyzer"
rb = "language_ruby:RubyAnalyzer"
php = "language_php:PhpAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

# Bundle all workspace-internal sub-packages so the wheel is self-contained.
# These paths are relative to apps/cli/ (this file's directory).
#
# The cli/assets/d3.v7.min.js entry ships the bundled D3.js used by the
# `context-router graph` command. It is force-included (in addition to being
# under `packages = ["src/cli"]`) because hatchling's default file-selection
# excludes non-.py files in some configurations, and a silent drop here
# would reintroduce the offline blank-canvas bug that this rule guards.
[tool.hatch.build.targets.wheel.force-include]
"src/cli/assets/d3.v7.min.js"                  = "cli/assets/d3.v7.min.js"
"../../packages/contracts/src/contracts"       = "contracts"
"../../packages/core/src/core"                 = "core"
"../../packages/storage-sqlite/src/storage_sqlite" = "storage_sqlite"
"../../packages/graph-index/src/graph_index"   = "graph_index"
"../../packages/memory/src/memory"             = "memory"
"../../packages/runtime/src/runtime"           = "runtime"
"../../packages/ranking/src/ranking"           = "ranking"
"../../packages/workspace/src/workspace"       = "workspace"
"../../packages/contracts-extractor/src/contracts_extractor" = "contracts_extractor"
"../../packages/benchmark/src/benchmark"       = "benchmark"
"../../packages/evaluation/src/evaluation"     = "evaluation"
"../../packages/language-python/src/language_python" = "language_python"
"../../packages/language-yaml/src/language_yaml"     = "language_yaml"
"../../packages/language-typescript/src/language_typescript" = "language_typescript"
"../../packages/language-java/src/language_java"     = "language_java"
"../../packages/language-dotnet/src/language_dotnet" = "language_dotnet"
# v4.4.4 — bundle the remaining language analyzers in every wheel. The
# tree-sitter parser deps are optional and gated by [all-languages]; the
# analyzer source itself is always present so doctor / PluginLoader can
# explain missing parsers (rather than failing as "no entry point").
"../../packages/language-go/src/language_go"         = "language_go"
"../../packages/language-rust/src/language_rust"     = "language_rust"
"../../packages/language-ruby/src/language_ruby"     = "language_ruby"
"../../packages/language-php/src/language_php"       = "language_php"
"../../packages/language-sql/src/language_sql"       = "language_sql"
"../../packages/adapters-claude/src/adapters_claude" = "adapters_claude"
"../../packages/adapters-copilot/src/adapters_copilot" = "adapters_copilot"
"../../packages/adapters-codex/src/adapters_codex"   = "adapters_codex"
"../../apps/mcp-server/src/mcp_server"         = "mcp_server"
