[project]
name = "context-router-mcp-server"
version = "3.1.0"
requires-python = ">=3.12"
description = "MCP server entrypoint for context-router (Phase 5)"
dependencies = [
    "context-router-contracts",
    "context-router-core",
    "context-router-memory",
    "context-router-runtime",
]

[project.scripts]
context-router-mcp = "mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
